# lunar_whispers_2026

./: .gitignore  DEPLOY.md  README.md  data.csv
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  wishes.py
backend/static/: index.html
backend/static/assets/: index-AEZBbxjk.css  index-Ci7uY7QQ.js  index-DG8YJR8W.js  index-DLyUHR_D.css
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: admin.js  wishes.js
frontend/src/components/: AdminPanel.css  AdminPanel.jsx  GoldDustEffect.jsx  LunarAurora.jsx  MakerBadge.jsx  OpeningCeremony.jsx  WishCard.jsx  WriteModal.jsx
